--- a/Ejercicios-HTML/Ejemplo-HTLM-CSS/Flexionando-Bloques/Style-Flex-Bloques.css
+++ b/Ejercicios-HTML/Ejemplo-HTLM-CSS/Flexionando-Bloques/Style-Flex-Bloques.css
@@ -16,7 +16,7 @@
     width: 180px;
     margin: 25px 20px 90px 10px;
     background-color: blue;
-    display: inline-flex;
+    
 }
 
 .main {
@@ -24,20 +24,20 @@
     width: 700px;
     background-color: red;
     margin: 20px;
-    display: inline-block;
     vertical-align: top;
-    padding: 10px 10px 5px 5px;
+    padding: 10px;
 
 }
+
 .sub-content {
     height: 190px;
     width: 190px;
     background-color: yellow;
     display: inline-block;
-    margin: 25px 15px 10px 10px;
-    vertical-align: top;
-    padding: 5px 10px 5px 5px;
+    margin: 25px 15px 10px 25px;
+    
 }
+
 #advertisement {
     height: 120px;
     width: 660px;
@@ -45,7 +45,7 @@
     margin: 20px 20px;
 }
 .row {
-    display: inline-flex;
+    display: flex;
     
     
 }
