Ajuste por error de zoom

--- a/Ejercicios-HTML/Ejemplo-HTLM-CSS/Bloques-GitHub/Style-GitHub.css
+++ b/Ejercicios-HTML/Ejemplo-HTLM-CSS/Bloques-GitHub/Style-GitHub.css
@@ -1,6 +1,6 @@
 .container {
-    width: 3500px;
-    height: 2500px;
+    width: 950px;
+    height: 750px;
     background-color: cyan;
     margin: 0 auto;
     border: 10px;
@@ -11,37 +11,38 @@
 } 
 
 header {
-    height: 150px;
+    height: 60px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding: 60px;
+    padding-top: 10px;
     font-weight: bolder;
-    font-size: 120px;
+    font-size: 40px;
     color: rgb(255, 6, 243);
     text-align: center;
 }
 
 section {
-    width: 3200px;
+    padding-bottom: 20px;
+    /* width: 3200px;
     height: 650px;
     padding-left:180px;
-    margin-top: 30px;
-}
+    margin-top: 30px;*/
+} 
 
 article {
     display: inline-block;
-    width: 3100px;
-    height: 650px;
+    /* width: 3100px;
+    height: 650px; */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .imagen {
-    width:650px;
-    height: 450px;
-    padding: 20px;
+    width:200px;
+    height: 200px;
+    /* padding: 20px; */
     border-style: double;
-    margin: 90px;
+    /* margin: 90px; */
 }
     /* align-items: center; */
         /* max-height: 100%; */
