--- a/Ejercicios-HTML/Ejemplo-HTLM-CSS/Bloques-GitHub/Style-GitHub.css
+++ b/Ejercicios-HTML/Ejemplo-HTLM-CSS/Bloques-GitHub/Style-GitHub.css
@@ -42,7 +42,7 @@ article {
     height: 200px;
     /* padding: 20px; */
     border-style: double;
-    /* margin: 90px; */
+    margin-left: 30px;
 }
     /* align-items: center; */
         /* max-height: 100%; */
